--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-calc.js"
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js"
+
   },
   "homepage": "https://github.com/Scampik/frontend-project-44#readme",
   "dependencies": {
