--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "brain-gcd": "bin/brain-gcd.js",
     "brain-progression": "bin/brain-progression.js",
     "brain-prime": "bin/brain-prime.js"
-
   },
   "homepage": "https://github.com/Scampik/frontend-project-44#readme",
   "dependencies": {
@@ -33,6 +32,7 @@
   "devDependencies": {
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.3.1"
   }
 }
